--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,29 @@ services:
     networks:
       - net
 
+  lion:
+    image: jumpserver/lion:${VERSION}
+    container_name: jms_lion
+    restart: always
+    tty: true
+    environment:
+      CORE_HOST: http://core:8080
+      BOOTSTRAP_TOKEN: $BOOTSTRAP_TOKEN
+      LOG_LEVEL: $LOG_LEVEL
+    depends_on:
+      core:
+        condition: service_healthy
+    healthcheck:
+      test: "curl -fsL http://localhost:8081/lion/health/ > /dev/null"
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    volumes:
+      - ${VOLUME_DIR}/lion/data:/opt/lion/data
+    networks:
+      - net
+
   web:
     image: jumpserver/web:${VERSION}
     container_name: jms_web
