--- a/web/jumpserver.conf
+++ b/web/jumpserver.conf
@@ -43,17 +43,17 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-#     location /lion/ {
-        # proxy_pass http://lion:8081;
-        # proxy_buffering off;
-        # proxy_http_version 1.1;
-        # proxy_request_buffering off;
-        # proxy_set_header Host $host;
-        # proxy_set_header Upgrade $http_upgrade;
-        # proxy_set_header Connection $http_connection;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     }
+    location /lion/ {
+        proxy_pass http://lion:8081;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_request_buffering off;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 
     location /ws/ {
         proxy_pass http://core:8070;
