--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,14 +1,15 @@
 FROM cr.loongnix.cn/loongson/loongnix:20
 WORKDIR /opt
-ARG VERSION=v2.22.2
+ARG TARGETARCH \
+    VERSION=v2.22.2
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
 
 ARG DEPENDENCIES="                    \
-    ca-certificates                   \
-    curl                              \
-    nginx                             \
-    wget"
+        ca-certificates               \
+        curl                          \
+        nginx                         \
+        wget"
 
 RUN set -ex \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
@@ -23,6 +24,7 @@ RUN set -ex \
     && echo "no" | dpkg-reconfigure dash \
     && rm -f /etc/nginx/sites-enabled/default \
     && rm -f /opt/*.tar.gz \
+    && apt-get clean all \
     && rm -rf /var/lib/apt/lists/*
 
 COPY web/jumpserver.conf /etc/nginx/conf.d/
