--- a/koko/Dockerfile
+++ b/koko/Dockerfile
@@ -1,9 +1,10 @@
 FROM cr.loongnix.cn/loongson/loongnix:20
-WORKDIR /opt/
 ARG TARGETARCH \
     VERSION=v2.22.2
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
+
+WORKDIR /opt/
 
 ARG DEPENDENCIES="                    \
         bash-completion               \
@@ -18,6 +19,7 @@ RUN set -ex \
     && apt-get update \
     && apt-get install -y --no-install-recommends $DEPENDENCIES \
     && echo "no" | dpkg-reconfigure dash \
+    && apt-get clean all \
     && rm -rf /var/lib/apt/lists/*
 
 RUN set -ex \
@@ -43,5 +45,7 @@ RUN set -ex \
 
 COPY koko/entrypoint.sh .
 RUN chmod 755 ./entrypoint.sh
+
+EXPOSE 2222
 
 CMD ["./entrypoint.sh"]
