--- a/koko/Dockerfile
+++ b/koko/Dockerfile
@@ -1,6 +1,6 @@
 FROM cr.loongnix.cn/loongson/loongnix:20
 ARG TARGETARCH \
-    VERSION=v2.23.4
+    VERSION=v2.24.0
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
 
@@ -28,11 +28,18 @@ RUN set -ex \
     && mv koko-${VERSION}-linux-${TARGETARCH} koko \
     && chown -R root:root /opt/koko \
     && mv /opt/koko/kubectl /usr/local/bin/ \
-    && chown root:root /usr/local/bin/kubectl \
+    && mv /opt/koko/helm /usr/local/bin/ \
+    && chown root:root /usr/local/bin/kubectl /usr/local/bin/helm \
     && wget https://download.jumpserver.org/public/kubectl-linux-${TARGETARCH}.tar.gz \
     && tar -xf kubectl-linux-${TARGETARCH}.tar.gz \
     && chmod 755 kubectl \
     && mv kubectl /usr/local/bin/rawkubectl \
+    && wget https://download.jumpserver.org/public/helm-v3.9.0-linux-${TARGETARCH}.tar.gz -O helm.tar.gz \
+    && tar -xf helm.tar.gz \
+    && mv linux-${TARGETARCH}/helm /usr/local/bin/rawhelm \
+    && chmod 755 /usr/local/bin/rawhelm \
+    && chown root:root /usr/local/bin/rawhelm \
+    && rm -rf linux-${TARGETARCH} \
     && wget http://download.jumpserver.org/public/kubectl_aliases.tar.gz \
     && mkdir /opt/kubectl-aliases/ \
     && tar -xf kubectl_aliases.tar.gz -C /opt/kubectl-aliases/ \
