--- a/lion/Dockerfile
+++ b/lion/Dockerfile
@@ -1,6 +1,6 @@
 FROM jumpserver/guacd:1.4.0
 ARG TARGETARCH \
-    VERSION=v2.24.0
+    VERSION=v2.24.1
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
 
@@ -10,6 +10,8 @@ ARG DEPENDENCIES="                    \
         ca-certificates               \
         curl                          \
         wget"
+
+USER root
 
 RUN set -ex \
     && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
