--- a/web/http_server.conf
+++ b/web/http_server.conf
@@ -65,6 +65,20 @@ server {
         send_timeout 6000;
     }
 
+    location /omnidb/ {
+        resolver 127.0.0.11 valid=30s;
+        set $upstream http://omnidb:8082;
+        proxy_pass $upstream$request_uri;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $http_connection;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+
     location /ws/ {
         proxy_pass http://core:8070;
         proxy_http_version 1.1;
