--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,6 +1,6 @@
-FROM jumpserver/python:3.8-loongnix
+FROM jumpserver/python:3.8-slim
 ARG TARGETARCH \
-    VERSION=v2.26.0
+    VERSION=v2.26.1
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
 
