--- a/magnus/Dockerfile
+++ b/magnus/Dockerfile
@@ -1,6 +1,6 @@
-FROM cr.loongnix.cn/loongson/loongnix:20
+FROM cr.loongnix.cn/loongson/loongnix:20-slim
 ARG TARGETARCH \
-    VERSION=v2.26.0
+    VERSION=v2.26.1
 ENV VERSION=${VERSION} \
     LANG="en_US.UTF-8"
 
