fix: 修正启动缺失 ps 命令

--- a/magnus/Dockerfile
+++ b/magnus/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /opt/
 ARG DEPENDENCIES="                    \
         ca-certificates               \
         curl                          \
+        procps                        \
         wget"
 
 RUN set -ex \
