--- a/config_example.conf
+++ b/config_example.conf
@@ -3,9 +3,9 @@ VERSION=v2.26.1
 
 # Compose
 COMPOSE_PROJECT_NAME=jms
-COMPOSE_HTTP_TIMEOUT=3600
-DOCKER_CLIENT_TIMEOUT=3600
-DOCKER_SUBNET=172.16.238.0/24
+# COMPOSE_HTTP_TIMEOUT=3600
+# DOCKER_CLIENT_TIMEOUT=3600
+DOCKER_SUBNET=192.168.250.0/24
 
 # 持久化存储
 VOLUME_DIR=/opt/jumpserver
@@ -27,10 +27,6 @@ SECRET_KEY=B3f2w8P2PfxIAS7s4URrD9YmSbtqX4vXdPUL217kL9XPUOWrmy
 BOOTSTRAP_TOKEN=7Q11Vz6R2J6BLAdO
 DEBUG=FALSE
 LOG_LEVEL=ERROR
-
-# Web
-HTTP_PORT=80
-SSH_PORT=2222
 
 ##
 # SECRET_KEY 保护签名数据的密匙, 首次安装请一定要修改并牢记, 后续升级和迁移不可更改, 否则将导致加密的数据不可解密。
